Fix board names being wrapped over two lines

--- a/assets/sass/components/_pages.scss
+++ b/assets/sass/components/_pages.scss
@@ -198,6 +198,10 @@ BOARDS
     }
 }
 
+.word{
+    display: inline-block;
+}
+
 /*  
 ================================================================
 BOARDS LETTER ANIMATIONS
